<resources>
    <string name="app_name" translatable="false">QuizBrand</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="ok">OK</string>
    <string name="nombres">NOMBRES</string>
    <string name="paises">PAÍSES</string>
    <string name="sectores">SECTORES</string>
    <string name="menu">MENÚ</string>
    <string name="opciones">OPCIONES</string>
    <string name="empezar">EMPEZAR</string>
    <string name="contentDescriptionLogo">Imagen del logo</string>


    <string name="seleccionaPais">Selecciona el país de procedencia:</string>
    <string name="btn_pais1" translatable="false">PAIS 1</string>
    <string name="btn_pais2" translatable="false">PAIS 2</string>
    <string name="btn_pais3" translatable="false">PAIS 3</string>
    <string name="btn_pais4" translatable="false">PAIS 4</string>
    <string name="seleccionaSector">Selecciona el sector al que pertenece</string>

    <string name="resultado">PUNTUACIÓN CONSEGUIDA</string>
    <string name="back_to_menu">VOLVER AL MENU</string>

</resources>
